--- a/customization/customize/other.yaml
+++ b/customization/customize/other.yaml
@@ -1,7 +1,7 @@
 binary_sensor.workday_sensor:
   homebridge_hidden: true
 !secret person_1:
-  entity_picture: '"/local/favicon1.png"'
+  entity_picture: /local/favicon1.png
 script.tasmota_upgrade_sonoff_3082:
   can_cancel: false
 !secret zone1_fullname:
