--- a/sensor/mqtt.yaml
+++ b/sensor/mqtt.yaml
@@ -49,8 +49,9 @@
 - platform: mqtt
   name: s20_mm_uptime
   state_topic: "sonoff_3463/tele/STATE"
-  value_template: "{{ ((value_json.Uptime[:1] | int * 24) + (value_json.Uptime[2:4] | int) + (value_json.Uptime[5:7] | int / 60) + (value_json.Uptime[8:10] | int / 60 / 60))|round(2) }}"
-  unit_of_measurement: "hours"
+  value_template: "{{ value_json.Uptime }}"
+  #value_template: "{{ ((value_json.Uptime[:1] | int * 24) + (value_json.Uptime[2:4] | int) + (value_json.Uptime[5:7] | int / 60) + (value_json.Uptime[8:10] | int / 60 / 60))|round(2) }}"
+  #unit_of_measurement: "hours"
 
 - platform: mqtt
   name: s20_mm_rssi
