--- a/customization/customize/media_player.yaml
+++ b/customization/customize/media_player.yaml
@@ -1,7 +1,8 @@
 media_player.braviatv_1:
   friendly_name: Sony Bravia TV
   icon: mdi:television
-  homebridge_name: Fernseher
-  homebridge_media_player_switch: on_off
+  homebridge_hidden: true
+  # homebridge_name: Fernseher
+  # homebridge_media_player_switch: on_off
 media_player.playstation_4:
   homebridge_media_player_switch: on_off
