--- a/homekit.yaml
+++ b/homekit.yaml
@@ -1,10 +1,29 @@
 auto_start: false
 port: 51827
-# safe_mode: true
+safe_mode: true
 filter:
   include_domains:
     - media_player
     - light
     - switch
-  include_entities:
-    - media_player.braviatv_1
+  exclude_entities:
+    - light.deckenleuchte_grp
+    - light.kuche
+    - light.rwl021_16
+    - light.rwl021_17
+    - light.schlafzimmer
+    - light.toilette
+    - light.tradfri_remote_control_9
+    - light.tradfri_wireless_dimmer_18
+    - light.tradfri_wireless_dimmer_22
+    - light.vorzimmer
+    - light.wohnzimmer
+    - media_player.kd_55xf8505
+    - switch.magic_mirror_power
+entity_config:
+  media_player.braviatv_1:
+    name: Fernseher
+  media_player.playstation_4:
+    name: Playstation 4
+    feature_list:
+      - feature: on_off
