--- a/sensor/sensor.yaml
+++ b/sensor/sensor.yaml
@@ -1,18 +1,18 @@
-- platform: google_travel_time
-  name: google_travel_time_dev1_transit
-  api_key: !secret google_api
-  origin: !secret device1
-  destination: !secret zone1_fullname
-  options:
-    mode: transit
+# - platform: google_travel_time
+#   name: google_travel_time_dev1_transit
+#   api_key: !secret google_api
+#   origin: !secret device1
+#   destination: !secret zone1_fullname
+#   options:
+#     mode: transit
 
-- platform: google_travel_time
-  name: google_travel_time_dev1_dynamic_home
-  api_key: !secret google_api
-  origin: !secret device1
-  destination: zone.home
-  options:
-    mode: transit
+# - platform: google_travel_time
+#   name: google_travel_time_dev1_dynamic_home
+#   api_key: !secret google_api
+#   origin: !secret device1
+#   destination: zone.home
+#   options:
+#     mode: transit
 
 # - platform: uber
 #   server_token: !secret uber_st
