--- a/configuration.yaml
+++ b/configuration.yaml
@@ -25,7 +25,9 @@ http:
 automation: !include_dir_merge_list automation/
 config:
 conversation:
-#discovery:
+# discovery:
+#   ignore:
+#     - google_cast
 frontend:
   javascript_version: latest
   themes: !include_dir_merge_named themes
@@ -37,9 +39,9 @@ logger:
   logs:
     homeassistant.components.http.ban: warning
     # homeassistant.components.homekit: debug
-    # # pyhap: debug
-    pydeconz: debug
-    homeassistant.components.deconz: debug
+    # pyhap: debug
+    # pydeconz: debug
+    # homeassistant.components.deconz: debug
 lovelace:
   mode: yaml
 map:
@@ -56,7 +58,7 @@ script: !include_dir_merge_named script/
 sun:
 system_health:
 updater:
-#zeroconf:
+zeroconf:
 
 ### one liners
 binary_sensor: !include binary_sensor.yaml
@@ -65,7 +67,7 @@ breaking_changes:
 counter: !include counter.yaml
 device_tracker: !include device_tracker.yaml
 group: !include groups.yaml
-# homekit: !include homekit.yaml
+homekit: !include homekit.yaml
 input_boolean: !include input_boolean.yaml
 input_datetime: !include input_datetime.yaml
 input_number: !include input_number.yaml
@@ -77,6 +79,7 @@ plant: !include plant.yaml
 sensor: !include_dir_merge_list sensor/
 shell_command: !include shell_command.yaml
 switch: !include switch.yaml
+# websocket_api:
 zone: !include zone.yaml
 
 ### other components
