--- a/homekit.yaml
+++ b/homekit.yaml
@@ -1,29 +1,47 @@
 auto_start: false
 port: 51827
-safe_mode: true
+advertise_ip: !secret host_ip
+#safe_mode: true
 filter:
   include_domains:
-    - media_player
-    - light
+    # - media_playerh
+    # - light
     - switch
-  exclude_entities:
-    - light.deckenleuchte_grp
-    - light.kuche
-    - light.rwl021_16
-    - light.rwl021_17
-    - light.schlafzimmer
-    - light.toilette
-    - light.tradfri_remote_control_9
-    - light.tradfri_wireless_dimmer_18
-    - light.tradfri_wireless_dimmer_22
-    - light.vorzimmer
-    - light.wohnzimmer
-    - media_player.kd_55xf8505
-    - switch.magic_mirror_power
+  include_entities:
+    - input_boolean.loop_livingcolors_1
+    - input_boolean.loop_livingcolors_2
+    - light.deckenleuchte
+    - light.stehlampe
+    - light.deckenspots
+    - light.hue_spot_1
+    - light.hue_spot_2
+    - light.hue_spot_3
+    - light.schreibtischlampe
+    - light.light_7
+    - light.light_8
+    - light.light_9
+    - light.light_10
+    - light.light_11
+    - media_player.braviatv_1
+    - media_player.playstation_4
+    - sensor.wemosd1_room_humidty
+    - sensor.wemosd1_room_temperature
 entity_config:
+  input_boolean.loop_livingcolors_1:
+    name: "Loop 1"
+  input_boolean.loop_livingcolors_2:
+    name: "Loop 2"
   media_player.braviatv_1:
     name: Fernseher
   media_player.playstation_4:
-    name: Playstation 4
+    name: "Playstation 4"
     feature_list:
       - feature: on_off
+  sensor.wemosd1_room_humidty:
+    name: "Luftfeuchtigkeit"
+  sensor.wemosd1_room_temperature:
+    name: "Temparatur"
+  switch.magic_mirror:
+    name: "Magic Mirror"
+  switch.robovac:
+    name: "Robovac"
