--- a/automation/light_automations.yaml
+++ b/automation/light_automations.yaml
@@ -157,7 +157,7 @@
 - id: '1519077406569'
   alias: Ready for bed
   trigger:
-  - at: '21:30:00'
+    at: '21:30:00'
     platform: time
   condition:
   - condition: state
@@ -174,7 +174,7 @@
       group_name: Wohnzimmer
       scene_name: Nightlight
     service: hue.hue_activate_scene
-- id: "1563723839"
+- id: "156372383900"
   alias: turn bathroom lights off
   trigger:
   - platform: state
@@ -186,8 +186,8 @@
   - service: light.turn_off
     data:
       entity_id: light.badezimmer
-- id: "1563724325"
-  alias: turn toilet lights off
+- id: "156372432500"
+  alias: turn toilet lights off 2
   trigger:
   - platform: state
     entity_id: light.toilette
@@ -198,3 +198,34 @@
   - service: light.turn_off
     data:
       entity_id: light.toilette
+- id: "156968881500"
+  alias: turn toilet lights off
+  trigger:
+  - platform: state
+    entity_id: binary_sensor.presence_10
+    to: 'off'
+    # for:
+    #   minutes: 5
+  condition:
+    condition: state
+    entity_id: light.toilette
+    state: 'on'
+  action:
+  - service: light.turn_off
+    data:
+      entity_id: light.toilette
+- id: "156968881501"
+  alias: turn toilet lights on
+  trigger:
+    platform: state
+    entity_id: binary_sensor.presence_10
+    to: 'on'
+  condition:
+    condition: state
+    entity_id: light.toilette
+    state: 'off'
+  action:
+  - service: light.turn_on
+    data_template:
+      entity_id: light.toilette
+      brightness_pct: '{% if "07:00" < states.sensor.time.state < "22:00" %}100{% else %}5{% endif %}'
