--- a/media_player.yaml
+++ b/media_player.yaml
@@ -4,6 +4,40 @@
   psk: !secret tv_tv1_psk
   mac: !secret tv_tv1_mac
   android: true
+  sourcefilter:
+    - 'HDMI 1'
+    - 'HDMI 2'
+    - 'HDMI 3/ARC'
+    - 'HDMI 4'
+    - 'ORF eins HD'
+    - 'ORF 2 Wien HD'
+    - 'ATV HD'
+    - 'PULS 4 HD'
+    - 'Servus TV HD'
+    - 'Das Erste HD'
+    - 'ZDF HD'
+    - 'ORF III HD'
+    - 'ProSieben HD'
+    - 'RTL'
+    - 'SAT.1 HD'
+    - 'RTL II'
+    - 'kabel eins HD'
+    - 'VOX'
+    - 'ATV II HD'
+    - 'arte HD'
+    - 'kabel eins Doku'
+    - 'N24 doku'
+    - 'ntv'
+    - 'Phoenix HD'
+    - 'ZDF info HD'
+    - 'One HD'
+    - 'PULS24 HD'
+    - 'Sky Sport Austria 1 HD'
+    - 'Sky Sport Austria 2 HD'
+    - 'Sky Sport HD 1'
+    - 'Sky Sport HD 2'
+    - 'ORF Sport+ HD'
+    - 'Sky Sport News HD'
 - platform: ps4_node
   host: !secret ps4waker_host
   ps4_ip: !secret ps4_ip
