--- a/switch.yaml
+++ b/switch.yaml
@@ -35,3 +35,18 @@
           entity_id: switch.magic_mirror_power
       turn_off:
         service: script.magic_mirror_shutdown
+    robovac:
+      value_template: >
+        {% if is_state('vacuum.robovac', 'off') %}
+         False
+        {% else %}
+         True
+        {% endif %}
+      turn_on:
+        service: vacuum.turn_on
+        data:
+          entity_id: vacuum.robovac
+      turn_off:
+        service: vacuum.turn_off
+        data:
+          entity_id: vacuum.robovac
