--- a/customization/customize_global.yaml
+++ b/customization/customize_global.yaml
@@ -32,3 +32,7 @@
   homebridge_hidden: true
 "zone.*home":
   friendly_name: home
+"zone.*":
+  track_ios: false
+"scene.*":
+  homebridge_hidden: true
