--- a/script/scripts.yaml
+++ b/script/scripts.yaml
@@ -1,11 +1,14 @@
 wakeup_schlafzimmer:
   alias: 'Wakeup routine: lights and weather'
   sequence:
-    - service: light.turn_on
-      data_template:
-        entity_id: light.deckenspots
-        brightness: 1
-        xy_color: [0.5609, 0.4042]
+    - service: scene.turn_on
+      data:
+        entity_id: scene.deckenspots_nightlight
+    # - service: light.turn_on
+    #   data_template:
+    #     entity_id: light.deckenspots
+    #     brightness: 1
+    #     xy_color: [0.5609, 0.4042]
     - delay:
         seconds: 1
     - service: light.turn_on
@@ -13,41 +16,41 @@ wakeup_schlafzimmer:
         entity_id: light.deckenspots
         brightness: 146
         transition: '{{ states.input_number.wakeup_duration.state | multiply(60) | int }}'
-scene_bright:
-  alias: 'Bright'
-  sequence:
-    - service: hue.hue_activate_scene
-      data_template:
-        group_name: "Zimmer"
-        scene_name: "bright_spots"
-scene_tropical_twilight:
-  alias: 'Tropical twilight'
-  sequence:
-    - service: hue.hue_activate_scene
-      data_template:
-        group_name: "Zimmer"
-        scene_name: "Tropical twilight"
-scene_nightlight:
-  alias: 'Nightlight'
-  sequence:
-    - service: hue.hue_activate_scene
-      data_template:
-        group_name: "Zimmer"
-        scene_name: "nightlight_spots"
-scene_arctic_aurora:
-  alias: 'Arctic aurora'
-  sequence:
-    - service: hue.hue_activate_scene
-      data_template:
-        group_name: "Zimmer"
-        scene_name: "Arctic aurora"
-scene_spring_blossom:
-  alias: 'Spring blossom'
-  sequence:
-    - service: hue.hue_activate_scene
-      data_template:
-        group_name: "Zimmer"
-        scene_name: "Spring blossom"
+# scene_bright:
+#   alias: 'Bright'
+#   sequence:
+#     - service: hue.hue_activate_scene
+#       data_template:
+#         group_name: "Zimmer"
+#         scene_name: "bright_spots"
+# scene_tropical_twilight:
+#   alias: 'Tropical twilight'
+#   sequence:
+#     - service: hue.hue_activate_scene
+#       data_template:
+#         group_name: "Zimmer"
+#         scene_name: "Tropical twilight"
+# scene_nightlight:
+#   alias: 'Nightlight'
+#   sequence:
+#     - service: hue.hue_activate_scene
+#       data_template:
+#         group_name: "Zimmer"
+#         scene_name: "nightlight_spots"
+# scene_arctic_aurora:
+#   alias: 'Arctic aurora'
+#   sequence:
+#     - service: hue.hue_activate_scene
+#       data_template:
+#         group_name: "Zimmer"
+#         scene_name: "Arctic aurora"
+# scene_spring_blossom:
+#   alias: 'Spring blossom'
+#   sequence:
+#     - service: hue.hue_activate_scene
+#       data_template:
+#         group_name: "Zimmer"
+#         scene_name: "Spring blossom"
 find_browser_commander_ids:
   alias: browser command debug
   sequence:
