--- a/sensor/pricemonitoring.yaml
+++ b/sensor/pricemonitoring.yaml
@@ -8,3 +8,10 @@
   product_id: 1777806
   description: "Sony Alpha 7 III"
   locale: "AT"
+- platform: nintendo_wishlist
+  country: AT
+  wishlist:
+    - 'The Binding of Isaac: Afterbirth+'
+    - '80 DAYS'
+    - 'Untitled Goose Game'
+    - 'Return of the Obra Dinn'
