--- a/custom_components/hacs/manifest.json
+++ b/custom_components/hacs/manifest.json
@@ -1,17 +1,25 @@
 {
   "domain": "hacs",
   "name": "HACS (Home Assistant Community Store)",
-  "documentation": "https://custom-components.github.io/hacs",
-  "dependencies": [],
+  "documentation": "https://hacs.xyz",
+  "dependencies": [
+    "websocket_api",
+    "frontend",
+    "persistent_notification",
+    "lovelace"
+  ],
   "config_flow": true,
   "codeowners": [
     "@ludeeus"
   ],
-  "homeassistant": "0.97.0",
+  "homeassistant": "0.98.0",
   "requirements": [
     "aiofiles==0.4.0",
-    "backoff==1.8.0",
-    "aiogithubapi==0.2.0",
-    "integrationhelper==0.2.2"
+    "attrs==19.3.0",
+    "aiogithubapi==0.4.2",
+    "backoff==1.10.0",
+    "integrationhelper==0.2.2",
+    "semantic_version==2.8.3",
+    "hacs_frontend==29"
   ]
 }
