--- a/configuration.yaml
+++ b/configuration.yaml
@@ -50,7 +50,7 @@ person: !include person.yaml
 recorder:
   db_url: !secret mysql_db
   purge_interval: 1
-  purge_keep_days: 14
+  purge_keep_days: 30
   include: !include recorder_include.yaml
   exclude: !include recorder_exclude.yaml
 script: !include_dir_merge_named script/
@@ -73,6 +73,7 @@ input_datetime: !include input_datetime.yaml
 input_number: !include input_number.yaml
 input_select: !include input_select.yaml
 ios: !include ios.yaml
+light: !include light.yaml
 media_player: !include media_player.yaml
 notify: !include notify.yaml
 plant: !include plant.yaml
@@ -136,7 +137,7 @@ speedtestdotnet:
     - download
     - upload
   scan_interval:
-     minutes: 15
+     hours: 3
 
 weather:
   - platform: darksky
