--- a/homekit.yaml
+++ b/homekit.yaml
@@ -12,7 +12,7 @@ filter:
     - input_boolean.loop_livingcolors_2
     - light.deckenleuchte
     - light.stehlampe
-    - light.deckenspots
+    # - light.deckenspots
     - light.hue_spot_1
     - light.hue_spot_2
     - light.hue_spot_3
@@ -44,4 +44,4 @@ entity_config:
   switch.magic_mirror:
     name: "Magic Mirror"
   switch.robovac:
-    name: "Robovac"
+    name: "Staubsauger"
