--- a/automation/light_automations.yaml
+++ b/automation/light_automations.yaml
@@ -202,7 +202,7 @@
   alias: turn toilet lights off
   trigger:
   - platform: state
-    entity_id: binary_sensor.presence_10
+    entity_id: binary_sensor.motion_sensor
     to: 'off'
     # for:
     #   minutes: 5
@@ -218,7 +218,7 @@
   alias: turn toilet lights on
   trigger:
     platform: state
-    entity_id: binary_sensor.presence_10
+    entity_id: binary_sensor.motion_sensor
     to: 'on'
   condition:
     condition: state
