--- a/media_player.yaml
+++ b/media_player.yaml
@@ -13,32 +13,47 @@
     - 'ORF 2 Wien HD'
     - 'ATV HD'
     - 'PULS 4 HD'
+    # - 'Sixx Austria'
     - 'Servus TV HD'
     - 'Das Erste HD'
     - 'ZDF HD'
     - 'ORF III HD'
     - 'ProSieben HD'
-    - 'RTL'
+    # - 'RTL'
     - 'SAT.1 HD'
     - 'RTL II'
     - 'kabel eins HD'
     - 'VOX'
     - 'ATV II HD'
-    - 'arte HD'
     - 'kabel eins Doku'
+    - 'arte HD'
     - 'N24 doku'
     - 'ntv'
-    - 'Phoenix HD'
+    # - 'Phoenix HD'
+    # - 'Comedy Central/VIVA HD'
+    - 'ZDF neo HD'
     - 'ZDF info HD'
-    - 'One HD'
+    # - 'SRF info HD'
+    # - 'MTV HD'
+    # - 'gotv'
+    - 'Sky 1 HD'
     - 'PULS24 HD'
-    - 'Sky Sport Austria 1 HD'
-    - 'Sky Sport Austria 2 HD'
+    - 'One HD'
     - 'Sky Sport HD 1'
     - 'Sky Sport HD 2'
+    - 'Sky Sport Austria 1 HD'
+    - 'Sky Sport Austria 2 HD'
+    # - 'Sky Sport Austria 3 HD'
+    # - 'Sky Sport Austria 4 HD'
     - 'ORF Sport+ HD'
-    - 'Sky Sport News HD'
+    # - 'Eurosport 1 HD'
+    # - 'Sky Sport News HD'
+    # - 'Sport 1 HD'
 - platform: ps4_node
   host: !secret ps4waker_host
   ps4_ip: !secret ps4_ip
   imagemap_json: https://raw.githubusercontent.com/Knapoc/homeassistant-config/master/games.json
+# - platform: androidtv
+#   name: braviatv_android
+#   host: !secret tv_tv1_ip
+#   device_class: androidtv
