--- a/shell_command.yaml
+++ b/shell_command.yaml
@@ -1,3 +1,3 @@
-clear_to_dark_wp: "sed -i 's/clear-wp.jpg/dark-wp.jpg/' /config/ui-lovelace.yaml"
-dark_to_clear_wp: "sed -i 's/dark-wp.jpg/clear-wp.jpg/' /config/ui-lovelace.yaml"
+# clear_to_dark_wp: "sed -i 's/clear-wp.jpg/dark-wp.jpg/' /config/ui-lovelace.yaml"
+# dark_to_clear_wp: "sed -i 's/dark-wp.jpg/clear-wp.jpg/' /config/ui-lovelace.yaml"
 shutdown_rpi: !secret shellcommand_rpi_shutdown
