--- a/automation/light_automations.yaml
+++ b/automation/light_automations.yaml
@@ -1,5 +1,5 @@
 - alias: WakeUp Light Bedroom
-  id: '1500581870955'
+  id: '1500581870'
   trigger:
     platform: template
     value_template: '{{ states.sensor.time.state == states.sensor.wakeup_start_time_lights.state
@@ -25,7 +25,7 @@
     service: script.wakeup_schlafzimmer
 
 - alias: Random light - Deckenspots
-  id: '33223'
+  id: '1500581871'
   trigger:
     platform: time_pattern
     minutes: /2
@@ -47,7 +47,7 @@
       brightness: 255
 
 - alias: Random light - Stehlampe
-  id: '20180513163100'
+  id: '1500581872'
   trigger:
     platform: time_pattern
     minutes: /2
@@ -68,31 +68,29 @@
       transition: 5
       brightness: 132
 
-- id: '1555301143838'
+- id: '1555301143'
   alias: turn off loop-effect Stehlampe
   trigger:
   - entity_id: light.stehlampe
     platform: state
     to: 'off'
-  condition: []
   action:
   - data:
       entity_id: input_boolean.loop_livingcolors_2
     service: input_boolean.turn_off
 
-- id: '1555301210835'
+- id: '1555301144'
   alias: turn off loop-effect Deckenspots
   trigger:
   - entity_id: light.deckenspots
     platform: state
     to: 'off'
-  condition: []
   action:
   - data:
       entity_id: input_boolean.loop_livingcolors_1
     service: input_boolean.turn_off
 
-- id: '1519076898412'
+- id: '1555301145'
   alias: Gaming PS4
   trigger:
   - entity_id: media_player.playstation_4
@@ -108,12 +106,14 @@
     entity_id: !secret person_1
     state: home
   action:
-  - data:
-      group_name: Deckenleuchte
-      scene_name: Arctic aurora
-    service: hue.hue_activate_scene
+  - service: input_boolean.turn_on
+    data:
+      entity_id: input_boolean.loop_livingcolors_2
+  - service: light.turn_off
+    data:
+      entity_id: light.deckenleuchte
 
-- id: '1519077187087'
+- id: '1555301146'
   alias: Stop playing PS4
   trigger:
   - entity_id: media_player.playstation_4
@@ -129,32 +129,11 @@
     entity_id: !secret person_1
     state: home
   action:
-  - data:
-      group_name: Deckenleuchte
-      scene_name: Nightlight
-    service: hue.hue_activate_scene
-
-- alias: Hue Scene Activation
-  id: '1500589870955'
-  trigger:
-    platform: state
-    entity_id: input_select.hue_scenes
-  condition:
-    condition: template
-    value_template: '{{ states.input_select.hue_scenes.state != "none" }}'
-  action:
-  - service: hue.hue_activate_scene
-    data_template:
-      group_name: Zimmer
-      scene_name: '{{ trigger.to_state.state }}'
-  - delay:
-      seconds: 3
-  - service: input_select.select_option
+  - service: scene.turn_on
     data:
-      entity_id: input_select.hue_scenes
-      option: none
+      entity_id: scene.deckenleuchte_grp_nightlight
 
-- id: '1519077406569'
+- id: '1519077406'
   alias: Ready for bed
   trigger:
     at: '21:30:00'
@@ -170,11 +149,11 @@
     entity_id: binary_sensor.workday_sensor
     state: 'on'
   action:
-  - data:
-      group_name: Wohnzimmer
-      scene_name: Nightlight
-    service: hue.hue_activate_scene
-- id: "156372383900"
+  - service: scene.turn_on
+    data:
+      entity_id: scene.deckenleuchte_grp_nightlight
+    
+- id: "1563723839"
   alias: turn bathroom lights off
   trigger:
   - platform: state
@@ -186,7 +165,7 @@
   - service: light.turn_off
     data:
       entity_id: light.badezimmer
-- id: "156372432500"
+- id: "1563724325"
   alias: turn toilet lights off 2
   trigger:
   - platform: state
@@ -198,7 +177,7 @@
   - service: light.turn_off
     data:
       entity_id: light.toilette
-- id: "156968881500"
+- id: "1569688815"
   alias: turn toilet lights off
   trigger:
   - platform: state
@@ -214,7 +193,7 @@
   - service: light.turn_off
     data:
       entity_id: light.toilette
-- id: "156968881501"
+- id: "1569688816"
   alias: turn toilet lights on
   trigger:
     platform: state
