--- a/configuration.yaml
+++ b/configuration.yaml
@@ -10,8 +10,8 @@ homeassistant:
   customize_glob: !include customization/customize_global.yaml
   auth_providers:
     - type: homeassistant
-    - type: legacy_api_password
-      api_password: !secret http_password
+#    - type: legacy_api_password
+#      api_password: !secret http_password
   whitelist_external_dirs:
     - /tmp/diskinfo
 
@@ -105,6 +105,7 @@ asuswrt:
 
 hacs:
   token: !secret github_at
+  sidepanel_icon: hacs:hacs
   options:
     release_limit: 10
 
