nintendo sensor fix

--- a/sensor/pricemonitoring.yaml
+++ b/sensor/pricemonitoring.yaml
@@ -33,5 +33,5 @@
     - 'Dead Cells'
     - 'Wargroove'
     - 'The Touryst'
-    - 'Return of the Obra Dinn'
+    - 'Hollow Knight'
     # - 'Northgard'
