--- a/automation/wemosd1_1.yaml
+++ b/automation/wemosd1_1.yaml
@@ -6,7 +6,7 @@
   condition:
     condition: template
     value_template: '{{ states.sensor.sonoff_maddox_version.state | replace("v", "")
-      != states.sensor.wemosd1_1_version.state[:5] }}'
+      != states.sensor.wemosd1_version.state[:5] }}'
   action:
   - service: !secret notify_ios
     data_template:
