--- a/lovelace/views/03-blinds.yaml
+++ b/lovelace/views/03-blinds.yaml
@@ -152,6 +152,83 @@
                 card:
                   - width: 5px
                   - height: 10px
+        - type: markdown ### column
+          content: |
+            # Settings
+          style: |
+            ha-card {
+               height: 20px;
+               --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+               box-shadow: 2px 2px rgba(0,0,0,0.0);
+            }
+            h1 {
+              font-size: 20px;
+              font-weight: bold;
+              font-family: Helvetica;
+              letter-spacing: '-0.01em';
+            }
+        - type: markdown
+          content: >
+            # Various settings
+          style: |
+            ha-card {
+             height: 50px;
+             --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+             box-shadow: 2px 2px rgba(0,0,0,0.0);
+            }
+            h1 {
+              font-size: 14px;
+              font-weight: thin;
+              font-family: Helvetica;
+              letter-spacing: '-0.01em';
+            }
+        - type: horizontal-stack
+          cards:
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 5px
+                  - height: 10px
+            - type: entities
+              show_header_toggle: false
+              entities:
+                - entity: sensor.wakeup_open_time_covers
+                  name: Blind opening time
+                - entity: input_number.wakeup_cover_open_delay
+                  name: Delay
+                - entity: input_datetime.time_close_covers_night
+                  name: Blind closing time
+              style: |
+                ha-card {
+                  background-color: var(--primary-background-color);
+                  border-radius: 15px;
+                  box-shadow: 
+                    {% if is_state('sun.sun', 'above_horizon') %}
+                      -4px -4px 4px 0 rgba(255,255,255,.5),4px 4px 4px 0 rgba(0,0,0,.03);
+                    {% else %}
+                      -4px -4px 4px 0 rgba(50, 50, 50,.5),4px 4px 4px 0 rgba(0,0,0,.15);
+                    {% endif %}
+                }
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 5px
+                  - height: 10px
+        
         - type: 'custom:button-card'
           show_icon: false
           show_name: false
