--- a/input_datetime.yaml
+++ b/input_datetime.yaml
@@ -6,6 +6,10 @@ wakeup_alarm_time:
   name: Alarm
   has_date: false
   has_time: true
+time_close_covers_night:
+  name: Close covers
+  has_date: false
+  has_time: true
 robovac_cleaning_from:
   name: von
   has_date: false
